Revert "fixed scrollbar windows issue"
This reverts commit f521921b7ca6e6b0cee464dda7881568340c76e3.

--- a/Resources/public/css/cogitoweb.css
+++ b/Resources/public/css/cogitoweb.css
@@ -43,18 +43,14 @@ body.loader .overlay {
 aside.left-side {
   min-height: calc(100vh - 50px) !important;
   height: auto !important;
-  position: relative; }
-
-aside.main-sidebar {
-  overflow: hidden; }
-  aside.main-sidebar .slimScrollDiv {
-    width: calc(100% + 17px) !important;
-    overflow-y: scroll !important; }
+  position: relative;
+  overflow: scroll !important; }
 
 section.sidebar {
   min-height: calc(100vh - 50px) !important;
   height: auto !important;
-  position: relative; }
+  position: relative;
+  overflow: scroll !important; }
 
 .sidebar-menu li > a > .fa-angle-left:before {
   content: "\f107"; }
@@ -68,6 +64,9 @@ section.sidebar {
 .main-sidebar .user-panel,
 .sidebar-menu > li.header {
   margin-bottom: 62px; }
+
+aside.main-sidebar .slimScrollDiv {
+  overflow: scroll !important; }
 
 section.sidebar .treeview-menu i {
   display: none; }
